...

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageButton
                android:id="@+id/profile_btn"
                android:layout_width="49dp"
                android:layout_height="48dp"
                android:layout_alignParentStart="true"
                android:background="@drawable/account_default_icon_profile" />

            <TextView
...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/my_vibes_toolbar"
        android:layout_alignParentTop="false" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/my_vibe_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/my_vibe_menu_layout"
        android:layout_below="@id/vibe_filter_fragment" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_vibe_event_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/my_vibe_menu_layout"
        android:layout_alignEnd="@id/my_vibe_list"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
...
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/social_btn"
            style="?android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/button_group" />

...
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/button_map"
            android:tint="@color/White" />

        <ImageButton
            android:id="@+id/request_btn"
            style="?android:buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/button_follow_req"
            android:tint="@color/White" />
...
