...
                android:id="@+id/profile_picture"
                android:layout_width="185dp"
                android:layout_height="140dp"
                app:srcCompat="@drawable/account_default_icon_profile" />

            <TextView
                android:id="@+id/username_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/White"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/email_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/Gray"
                android:textSize="14sp" />
        </LinearLayout>

        <Button
            android:id="@+id/send_request_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="-25dp"
            android:background="@drawable/oval_button_style"
...
                    android:layout_height="wrap_content"
                    android:text="@string/following" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/logout_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:background="@drawable/oval_button_style"
...
