<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SearchProfilesActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/search_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:contentInsetStart="0dp">

        <TextView
            android:id="@+id/search_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/explore_vibes_name"
            android:textColor="@android:color/white"
            android:textSize="30sp" />
    </androidx.appcompat.widget.Toolbar>

    <SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:iconifiedByDefault="false"
        android:queryHint="@string/search" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_list_view"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" />

</LinearLayout>